Add slider logic

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 		<title>Test</title>
 	</head>
 	<body>
-		<div class="slider">
+		<div class="slider" id="slider">
 			<div class="slider__head">
 				<h4 class="slider__title">Актуальное</h4>
 				<div class="slider__progress">
-					<div class="slider__progress-completed"></div>
+					<div class="slider__progress-completed" id="progress-completed"></div>
 				</div>
 				<div class="slider__controls">
-					<div class="slider__button">
-						<div class="slider__arrow" id="previous"></div>
+					<div class="slider__button" id="previous">
+						<div class="slider__arrow"></div>
 					</div>
-					<div class="slider__button">
-						<div class="slider__arrow slider__arrow--reversed" id="next"></div>
+					<div class="slider__button" id="next">
+						<div class="slider__arrow slider__arrow--reversed"></div>
 					</div>
 				</div>
 			</div>
 			<div class="slider__body">
-				<div class="slider__slide">
+				<div class="slider__body-wrapper">
 					<div class="slider__item">
 						<div class="slider__item-image"></div>
 						<div class="slider__item-date">10 11 2020г</div>
@@ -87,17 +87,7 @@
 							был назначен на 7 декабря — «Лючия ди Ламмермур».
 						</div>
 					</div>
-					<div class="slider__item">
-						<div class="slider__item-image"></div>
-						<div class="slider__item-date">10 11 2020г</div>
-						<div class="slider__item-title">
-							BTS получили четыре награды MTV EMA
-						</div>
-						<div class="slider__item-text">
-							BTS получили четыре награды MTV EMA 27-я ежегодная церемония
-							награждения MTV Europe Music Awards состоялась 8 ноября 2020 г.
-						</div>
-					</div>
+					
 				</div>
 			</div>
 		</div>
